style.css
/* ... */
#page5 #footer-info p{
    font-size: 18px;
    line-height: 25px;
}

@media (max-width: 600px) {
    #nav {
        width: 100%;
        /* background-color: burlywood; */
        position: fixed;
        z-index: 99;
        padding: 15px;
        display: flex;
        align-items: flex-start;
        justify-content: space-between;
    }

    #nav-part1 {
        /* background: red; */
        height: 67px;
        overflow: hidden;
    }

    #nav-part1 svg {
        display: block;
        height: 67px;
        width: 80px;
    }

    #nav #svg2 {
        height: 40px;
        margin-left: -20px;
    }

    #nav #nav-part2 {
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 40px;
    }

    #links {
        padding: 10px;
        display: none;
    }

    #icons {
        padding: 7px;
        border-radius: 50px;
        background-color: #F7F7F7;
    }

    #nav-part2 #icons i {
        font-size: 15px;
        margin: 0px 20px;
        font-weight: 100;
    }

    #page1 {
        min-height: 70vh;
        width: 100%;
        padding: 0 3vw;
        padding-top: 25vh;
    }

    #page1 h1 {
        font-size: 15.5vw;
        letter-spacing: -3px;
    }

    #video-container {
        height: 25vh;
        margin-top: 3vw;
    }

    #video-container #play {
        padding: 9.5vw 7.2vw;
        font-size: 4.5vw;
        position: absolute;
        top: 50%;
        left: 50%;
        opacity: 1;
        scale: 1;
        transform: translate(-50%, -50%);
    }

    #page2 {
        min-height: 100vh;
        width: 100%;
        position: relative;
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 5vw 3vw;
        justify-content: space-between;
    }

    #page2 .elem {
        height: 100vh;
        width: 100%;
        /* background-color: red; */
        overflow: hidden;
        margin-bottom: 3vw;
    }

    #moto {
        display: flex;
        flex-direction: column;
        margin-bottom: 65px;
        justify-content: center;
        gap: 15px;
        text-align: center;
    }

    #moto h2 {
        font-size: 32px;
        font-family: futura;
        width: 100%;
    }

    #moto .para p {
        font-size: 16px;
        margin-bottom: 32px;
    }

    #moto .para a {
        font-size: 12px;
    }

    #page3 {
        min-height: 66vh;
        width: 100%;
        position: relative;
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        flex-wrap: wrap;
    }

    .child {
        height: 20vh;
        width: 38vw;
        /* background-color: red; */
        /* border: 2px solid black; */
        position: relative;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .child img {
        height: 100%;
    }

    .child .childInfo {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 5px;
    }

    .child .childInfo a {
        text-decoration: none;
        color: black;
        text-transform: uppercase;
        font-weight: 100;
        font-size: 14px;
        text-align: center;
    }

    #page4 #thankyou h2 {
        font-size: 24px;
        width: 100%;
        line-height: inherit;
        margin: 30px;
        padding: 0 20px
    }

    #page4 #thankyou {
        height: 50vh;
    }

    #page4 #impact {
        display: flex;
        flex-direction: column-reverse;
        width: 100%;
        height: auto;
        align-items: center;
        justify-content: center;
    }

    #impact #images {
        DISPLAY: flex;
        align-items: center;
        justify-content: space-evenly;
        width: 100%;
        height: 100%;
    }

    #page4 #impact img {
        HEIGHT: 202PX;
        width: 44%;
    }

    #page4 #impact #impact-para {
        width: auto;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-self: flex-start;
        margin-top: 10px;
        padding: 20px;
    }

    #impact-para h2 {
        margin-bottom: 15px;
    }

    #impact-para p {
        width: 99%;
        margin-bottom: 32px;
        line-height: 21px;
    }

    #page5 #footer{
        margin-top: 50px;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #footer #connect{
        display: flex;
        flex-direction: column;
        padding: 30px;
        gap: 5px;
        align-items: center;
    }
    
    #footer #connect p, #nitty p{
        margin-bottom: 15px;
        font-size: 14px;
        opacity: 0.5;
    }
    
    #footer #connect a, #nitty a{
        font-size: 17px;
        color: #000;
        text-decoration: none;
        font-weight: 500;
    }
    
    #footer #logo{
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    #footer #logo img {
        height: auto;
        width: 40%;
        object-fit: cover;
    }
    
    #footer #logo #copyright {
        margin-top: 15px;
        display: flex;
    }
    
    #footer #logo #copyright a{
        padding: 0 15px;
        text-decoration: none;
        color: #000;
        opacity: 0.5;
        text-align: center;
    }
    
    #footer #nitty{
        display: flex;
        flex-direction: column;
        padding: 30px;
        align-items: center;
        gap: 5px;
    }
    
    #page5 #footer-info{
        width: 100%;
        margin: 0;
        padding: 15px;
        text-align: center;
    }
    
    #page5 #footer-info p{
        font-size: 18px;
        line-height: 25px;
    }

}

#slider-section {
    min-height: 100vh;
    width: 100%;
    position: relative;
    overflow: hidden;
    background-color: #f0f0f0;
}
/* ... */

